search result truncate fix

--- a/src/search/index.css
+++ b/src/search/index.css
@@ -43,3 +43,7 @@
     background-color: rgba(var(--tertiary-rgb), 0.1);
     border-color: var(--accent);
 }
+
+.sf-review-stats {
+
+}
